--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Dmitry Ogurtsov Web Developer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Dmitry Ogurtsov professional web developer">
+    <meta name="author" content="Dmitry Ogurtsov">
 
     <!-- Le styles -->
     <link href="bootstrap.css" rel="stylesheet">
@@ -23,10 +23,6 @@
 
     <!-- Le fav and touch icons -->
     <link rel="shortcut icon" href="../assets/ico/favicon.ico">
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../assets/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="../assets/ico/apple-touch-icon-57-precomposed.png">
   </head>
 
   <body>
@@ -53,27 +49,61 @@
 
     <div class="container">
 
-      <h1>Bootstrap starter template</h1>
-      <p>Use this document as a way to quick start any new project.<br> All you get is this message and a barebones HTML document.</p>
-
+      <h1>Development Experience</h1>
+        <hr>
+        <h2></h2>
+        <ul>
+            <li>
+                <h2><a href="http://www.virtuosonline.us" target="_blank" title="company site">VirtuosOnline</a></h2>
+                 Commercial Web Sites Developer (front end and back end programmer), technical SEO and web site speed optimization manager
+            </li>
+            <li>
+                <h2><a href="http://www.valigar.com" target="_blank" title="company site">Valigar IP ltd</a></h2>
+                August 2011 to February 2012 - WordPress themes programming and deep customization. <strong>References will be provided upon request</strong>
+            </li>
+        </ul>
+        <hr>
+        <h2>Academic Education</h2>
+        <p>2012 B. Sc <a href="http://mis.haifa.ac.il/en" target="_blank" title="faculty site">Information System of Haifa University</a> (last semester, finish in July 2012)</p>
+        <hr>
+        <h2>Professional Experience In Development Environments</h2>
+        <ul>
+            <li>
+                <ul>
+                    <li class="pull-left"><a href="">PhpStorm+CSS-X-Fire+less+ZEN</a></li>
+                    <li class="pull-left"><a href="">FireBug</a></li>
+                    <div class="clearfix"></div>
+                </ul>
+            </li>
+            <li>
+                <ul>
+                    <li class="pull-left"><a href=""></a></li>
+                    <li class="pull-left"><a href=""></a></li>
+                    <div class="clearfix"></div>
+                </ul>
+            </li>
+            <li>
+                <ul>
+                    <li class="pull-left"><a href=""></a></li>
+                    <li class="pull-left"><a href=""></a></li>
+                    <div class="clearfix"></div>
+                </ul>
+            </li>
+            <li>
+                <ul>
+                    <li class="pull-left"><a href=""></a></li>
+                    <li class="pull-left"><a href=""></a></li>
+                    <div class="clearfix"></div>
+                </ul>
+            </li>
+            <li>
+                <ul>
+                    <li class="pull-left"><a href=""></a></li>
+                    <li class="pull-left"><a href=""></a></li>
+                    <div class="clearfix"></div>
+                </ul>
+            </li>
+        </ul>
     </div> <!-- /container -->
-
-    <!-- Le javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="../assets/js/jquery.js"></script>
-    <script src="../assets/js/bootstrap-transition.js"></script>
-    <script src="../assets/js/bootstrap-alert.js"></script>
-    <script src="../assets/js/bootstrap-modal.js"></script>
-    <script src="../assets/js/bootstrap-dropdown.js"></script>
-    <script src="../assets/js/bootstrap-scrollspy.js"></script>
-    <script src="../assets/js/bootstrap-tab.js"></script>
-    <script src="../assets/js/bootstrap-tooltip.js"></script>
-    <script src="../assets/js/bootstrap-popover.js"></script>
-    <script src="../assets/js/bootstrap-button.js"></script>
-    <script src="../assets/js/bootstrap-collapse.js"></script>
-    <script src="../assets/js/bootstrap-carousel.js"></script>
-    <script src="../assets/js/bootstrap-typeahead.js"></script>
-
   </body>
 </html>
